test/bad/type_declaration_12.mpp
data Type = #CTorA;
data Type = #CTorB; % illegal redeclaration of type
